@@ -267,6 +267,12 @@ REACTION17=<CODE>_HERO;-HOME "+<NAME>" +INT 5;NiceAbilities;
 REACTION18=<CODE>_HATED;-HOME "+<NAME>" +INT 5 -CHANCE 80;NastyAbilities;
 REACTION19=<CODE>_VILLIAN;-HOME "+<NAME>" +INT 5;NastyAbilities;
 REACTION20=<CODE>_HERO;-HOME "+<NAME>";Guard;<TARGET>
+REACTION21=<CODE>_LIKED;-HOME "+<NAME>" +INT 5 -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=3
+REACTION22=<CODE>_LOVED;-HOME "+<NAME>" +INT 5 -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=8
+REACTION23=<CODE>_HERO;-HOME "+<NAME>" +INT 5 -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=13
+REACTION24=<CODE>_DISLIKED;-HOME "+<NAME>" +INT 5 -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=-3
+REACTION25=<CODE>_HATED;-HOME "+<NAME>" +INT 5 -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=-8
+REACTION26=<CODE>_VILLIAN;-HOME "+<NAME>" +INT 5 -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=-13
 
 # Use Light Reactions relates to the reaction list above.
 # Set to false to use the normal reaction system, or true to use the 'light' reaction system.
