@@ -264,7 +264,13 @@ REACTION16=<CODE>_LOVED;-NAMES "+<NAME>" -CHANCE 80;NiceAbilities;
 REACTION17=<CODE>_HERO;-NAMES "+<NAME>";NiceAbilities;
 REACTION18=<CODE>_HATED;-NAMES "+<NAME>" -CHANCE 80;NastyAbilities;
 REACTION19=<CODE>_VILLIAN;-NAMES "+<NAME>";NastyAbilities;
-REACTION20=<CODE>_HERO;-HOME "+<NAME>";Guard;<TARGET>
+REACTION20=<CODE>_HERO;-NAMES "+<NAME>";Guard;<TARGET>
+REACTION21=<CODE>_LIKED;-NAMES "+<NAME>" -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=3
+REACTION22=<CODE>_LOVED;-NAMES "+<NAME>" -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=8
+REACTION23=<CODE>_HERO;-NAMES "+<NAME>" -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=13
+REACTION24=<CODE>_DISLIKED;-NAMES "+<NAME>" -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=-3
+REACTION25=<CODE>_HATED;-NAMES "+<NAME>" -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=-8
+REACTION26=<CODE>_VILLIAN;-NAMES "+<NAME>" -JAVACLASS +StdShopkeeper +GenShopkeeper;Skill_Befriend;<TARGET>=-13
 
 # Use Light Reactions relates to the reaction list above.
 # Set to false to use the normal reaction system, or true to use the 'light' reaction system.
